[metadata]
name = pyuio
version = 0.0.1
description = Experimental Python module for UIO devices
keywords = uio, embedded, linux, userspace i/o
author = Lucas Brasilino
author_email = lucas.brasilino@gmail.com
license = MIT
url = https://github.com/lucasbrasilino/pyuio
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6

